
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct proc_reader {int buffer_size; int * buffer; } ;


 int EXIT_FAILURE ;
 int exit (int ) ;
 int perror (char*) ;
 int * realloc (int *,int) ;

__attribute__((used)) static void proc_ensure_size(struct proc_reader* pr, int size) {
 if (pr->buffer_size >= size)
  return;
 while (pr->buffer_size < size)
  pr->buffer_size <<= 1;
 pr->buffer = realloc(pr->buffer, pr->buffer_size);
 if (pr->buffer == ((void*)0)) {
  perror("[-] proc_ensure_size: realloc()");
  exit(EXIT_FAILURE);
 }
}
